--- a/Videotheek/Videotheek.csproj
+++ b/Videotheek/Videotheek.csproj
@@ -53,6 +53,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="DecimalIngaveRule.cs" />
+    <Compile Include="GenreSelectRule.cs" />
+    <Compile Include="StringIngaveRule.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -61,7 +64,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="GetalIngaveOk.cs" />
+    <Compile Include="GetalGroterDanNulRule.cs" />
+    <Compile Include="IntGetalIngaveRule.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
